identifiers-uuid/tests/ui/uuid_not_newtype.stderr
error: expected a newtype struct with exactly one unnamed field
 --> tests/ui/uuid_not_newtype.rs:4:1
  |
4 | / struct BadId {
5 | |     id: String,
6 | | }
  | |_^
