identifiers-uuid/tests/ui/uuid_not_newtype.rs
use identifiers_uuid::UuidIdentifier;

#[derive(UuidIdentifier)]
struct BadId {
    id: String,
}

fn main() {}
